FM Radio: Add correct permissions to /dev/radio0
Since there is new group ID (AID_FMRADIO) available for
FM Radio, change the owner of /dev/radio0 to fmradio and
give access permission only to the owner.

This patch is similar to http://review.omapzoom.org/#/c/19542/
which was pushed to p-ics-mr1 branch

Change-Id: I3361ed5849aee8f445b93729cad3f827f1eb1103
Signed-off-by: Manjunatha Halli <x0130808@ti.com>

--- a/ueventd.omap4blazeboard.rc
+++ b/ueventd.omap4blazeboard.rc
@@ -33,7 +33,7 @@
 /dev/tf_ctrl              0660   drmrpc    drmrpc
 
 #for FM v4l2 Radio
-/dev/radio0               0666   system    radio
+/dev/radio0               0600   fmradio    fmradio
 
 #for GCX
 /dev/gcioctl              0666   system     system
