--- a/init.omap4blazeboard.rc
+++ b/init.omap4blazeboard.rc
@@ -36,6 +36,10 @@ on boot
 	write /sys/devices/system/cpu/cpufreq/interactive/min_sample_time 20000
 	write /sys/devices/system/cpu/cpufreq/interactive/hispeed_freq 800000
 
+# Boost the CPU for 30 secs during boot
+	write /sys/devices/system/cpu/cpufreq/interactive/boost_timeout 30000000
+	write /sys/devices/system/cpu/cpu0/cpufreq/boost_cpufreq 1
+
 # autosuspend root hubs immediatly after attached devices
 	write /sys/bus/usb/devices/usb1/power/autosuspend_delay_ms 0
 	write /sys/bus/usb/devices/usb2/power/autosuspend_delay_ms 0
