SMC: add support for loading SMC at boot time
Added support for loading SMC_pa and tf_daemon services at boottime

Change-Id: Ibf6aaa822446f2b812411d50c1a4ebc120d95707
Signed-off-by: Srinivas Pulukuru <srinivas.pulukuru@ti.com>

--- a/init.omap44xxtabletboard.rc
+++ b/init.omap44xxtabletboard.rc
@@ -111,6 +111,11 @@ on boot
 # GPS
         insmod /system/lib/modules/gps_drv.ko
 
+# start MSHIELD SMC/RPROC_DRM driver
+	insmod /system/lib/modules/tf_driver.ko
+	insmod /system/lib/modules/rproc_drm.ko
+	start smc_pa
+
 on fs
 	mkdir /factory 0775 radio radio
 	symlink /dev/block/platform /dev/block/platform/omap
