blaze_tablet: Rename fstab file
Fixing wrong name of fstab file.
To generate name of file Vold uses
value of property "ro.hardware".
Following this rule, to make
appropriate change of file name.

Change-Id: If8736a630a2ade36166392810a01fb99961e5c86
Signed-off-by: Igor Serbai <Igor.Serbai@ti.com>

--- a/init.omap44xxtabletboard.rc
+++ b/init.omap44xxtabletboard.rc
@@ -119,7 +119,7 @@ on boot
 on fs
 	mkdir /factory 0775 radio radio
 	symlink /dev/block/platform /dev/block/platform/omap
-	mount_all /fstab.blaze_tablet
+	mount_all /fstab.omap44xxtabletboard
 	setprop ro.crypto.fuse_sdcard true
 
 # H264 Encoder Profile setting
